= ActiveMerchant CHANGELOG

* PayPal Express gateway: Add unstore support [duff]

== Version 1.33.0 (May 30, 2013)

* Netaxept: Completely revamped to use the "M" service type [rbjordan3, ntalbott]
* Litle: Void authorizations via an auth reversal [jrust]
* Add RBK Money integration [england]
* Direcpay: Update test url [ashish-d]
* PayPal Express gateway: Add support for creating billing agreements [fabiokr]
* PayPal Express gateway: Add reference authorizations [fabiokr]
* Add Cardstream Modern gateway [ExxKA]
* Pin: Fix special headers [duff]
* PayPal Express gateway: Remember the billing agreement id as Response#authorization [duff]
* PayPal Express gateway: Allow an amount of 0 [duff]
* PayPal Express gateway: Reduce parameter requirements [duff]
* Quickpay integration: Update notification parser to handle API v6 [larspind]
* Sage gateway: Deprecate #credit call [duff]
* Update notification generator to better match current notification class [lulalala]
* Paymill gateway: Change .com -> .de [louiskearns]
* Quickpay integration: Fix v6 response parsing [larspind]
* First Data e4: Add TransArmor store/tokenization support [gabetax]
* MerchantWarrior: Format expiration month/year correctly [klebervirgilio]
* Add iconv for ActiveSupport 2.3 under Ruby 2.0 [sanemat]
* Add Transnational gateway [bvandenbos]
* Authorize.Net: Add Check as payment method [andrunix]
* Merchant e-Solutions: Add ref number and recurring support [carlaares]
* Bogus gateway: Add authorization to purchase response [hron]
* Bluepay gateway: Fix Check support; general cleanup [ntalbott]
* Dwolla: Fix security issues and enable guest checkout [capablemonkey, schonfeld]
* SagePay gateway: Per-transaction 3D-secure selection [ExxKA]
* Barclays ePDQ: Handle incorrectly encoded response [jordanwheeler, aprofeit]
* Orbital: Bug fixes; add CustomerEmail, Retry Logic, Managed Billing, and Destination Address [juicedM3
* Distinguish invalid vs empty issue_numbers on CreditCards [drasch]